--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 //views**
+views/4084c4e3-53bb-43b0-a478-0c51ed030be7.yy
+views/44b412a1-cbf9-4efa-83ff-df4052ad02f6.yy
+views/47526cad-d56d-4b2e-8468-13e5e4876fcb.yy
+views/61418ddc-eb1e-49ab-9c0a-6b74a5f9bbd7.yy
+views/74b53419-d289-40f9-91ee-16e18e2e11e8.yy
+views/756ef26a-75e0-4787-a8aa-3ff32ef44526.yy
+views/75f3a5f5-6ade-4783-a0e5-5a2a49abc7c1.yy
+views/8570aa2a-d53a-46bf-92b1-1360edff913a.yy
+views/86119cc2-82d1-42f2-8c0f-1046f8471815.yy
+views/b322ae3c-d5a9-4616-979c-29aa1aa09d6c.yy
+views/bc51dba7-39d9-42f2-8ab1-a90f34c8af74.yy
+views/bf419839-91c4-4f6f-a29b-8a07327f6842.yy
+views/c2589727-252f-4d46-9ce8-ed884a0fffc3.yy
+views/f0aecf49-7135-462c-93a1-0881e3456f82.yy
+views/faf4cf6d-38ae-4b2d-9a8a-01c5a6c9717b.yy
+views/fb391239-8435-4a3f-aa6b-e764557803b0.yy
